--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#2BA1FF</color>
+    <color name="colorPrimaryDark">#004779</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="black">#000</color>
+    <color name="grey">#8D8D8D</color>
 </resources>
